--- a/meetUS/bin/AndroidManifest.xml
+++ b/meetUS/bin/AndroidManifest.xml
@@ -29,6 +29,7 @@
         </activity>
         <activity android:name="vue.AccueilVue"></activity>
         <activity android:name="vue.CreateParty"></activity>
+        <activity android:name="vue.InfoPary"></activity>
     </application>
 
 </manifest>
