--- a/meetUS/bin/AndroidManifest.xml
+++ b/meetUS/bin/AndroidManifest.xml
@@ -6,9 +6,9 @@
 
     <uses-sdk
         android:minSdkVersion="7"
-        android:targetSdkVersion="19" />
-    
-     <uses-permission android:name="android.permission.INTERNET" />
+        android:targetSdkVersion="22" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -16,22 +16,29 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.meetus.MainActivity"
-            android:label="@string/app_name"
-            android:configChanges="orientation|keyboardHidden" >
+            android:name=".MainActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="vue.MainVue"
-            android:configChanges="keyboardHidden|orientation|screenSize" 
-           > 
+        <activity
+            android:name="vue.MainVue"
+            android:configChanges="keyboardHidden|orientation|screenSize" >
         </activity>
-        <activity android:name="vue.AccueilVue"></activity>
-        <activity android:name="vue.CreateParty"></activity>
-        <activity android:name="vue.InfoPary"></activity>
+        <activity android:name="vue.AccueilVue" >
+        </activity>
+        <activity android:name="vue.CreateParty" >
+        </activity>
+        <activity android:name="vue.InfoPary" >
+        </activity>
+        <activity
+            android:name=".ChoixActivite"
+            android:label="@string/title_activity_choix_activite" >
+        </activity>
     </application>
 
 </manifest>
